[package]
name = "token_2022_staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_staking"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"